tests/specs/check/check_imported_files_listed_in_exclude_option/exclude_option/exclude_option.ts.error.out
TS2304 [ERROR]: Cannot find name 'nothing'.
export { nothing };
         ~~~~~~~
    at file:///[WILDCARD]/exclude_option/ignored/index.ts:1:10

error: Type checking failed.
